--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,17 @@ aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
+asyncpg==0.30.0
 atlastk==0.13.4
 attrs==25.3.0
 backoff==2.2.1
 boto3==1.37.1
 botocore==1.37.1
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==45.0.2
 Deprecated==1.2.18
 distro==1.9.0
 ecdsa==0.19.1
@@ -24,6 +27,7 @@ fastapi==0.115.11
 frozenlist==1.5.0
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -32,6 +36,7 @@ importlib-metadata==6.0.1
 iso8601==2.1.0
 jiter==0.9.0
 jmespath==1.0.1
+jwt==1.3.1
 multidict==6.2.0
 openai==1.67.0
 opentelemetry-api==1.17.0
@@ -48,13 +53,18 @@ opentelemetry-proto==1.17.0
 opentelemetry-sdk==1.17.0
 opentelemetry-semantic-conventions==0.38b0
 opentelemetry-util-http==0.38b0
+packaging==25.0
 passlib==1.7.4
 propcache==0.3.1
 protobuf==4.25.6
 pyasn1==0.4.8
+pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
+pyhumps==3.8.0
+PyJWT==2.10.0
+pyparsing==3.2.3
 pypika-tortoise==0.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
